test/files/neg/t3098.check
b.scala:3: warning: match may not be exhaustive.
It would fail on the following input: (_ : C)
  def f = (null: T) match {
               ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
